<resources>
    <string name="app_name">Pizza Hunter</string>

    <!--info button titles-->
    <string name="info_button_1">Locatii</string>
    <string name="info_button_2">Program restaurante</string>
    <string name="info_button_3">Comanda minima</string>
    <string name="info_button_4">Termeni si conditii</string>
    <string name="info_button_5">Alergeni si valori nutritionale</string>

    <!--page titles-->
    <string name="home_title">Pizza Hunter</string>
    <string name="menu_title">Meniu</string>
    <string name="info_title">Informatii</string>
    <string name="profile_title">Contul meu</string>
    <string name="login_title">Intra in cont</string>
    <string name="signup_title">Creeaza cont nou</string>
    <string name="edit_profile_title">Editeaza profilul</string>

    <!--buttons-->
    <string name="login_button">Intra in cont</string>
    <string name="signup_button">Creeaza cont nou</string>
    <string name="save_button">Salveaza</string>

    <!--bottom nav buttons-->
    <string name="home_nav_button">Acasa</string>
    <string name="menu_nav_button">Meniu</string>
    <string name="info_nav_button">Info</string>
    <string name="profile_nav_button">Contul meu</string>

    <!--hints-->
    <string name="email_textinput">Adresa de e-mail</string>
    <string name="password_textinput">Parola</string>
    <string name="confirm_password_textinput">Confirma parola</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume</string>
    <string name="phone_number_textinput">Numar de telefon</string>
    <string name="old_password">Parola Veche</string>
    <string name="new_password">Parola Noua</string>
    <string name="confirm_new_password">Confirma Parola Noua</string>

    <!--content descriptions-->
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="video_play_button">Video play button</string>
    <string name="facebook_login_button">Facebook Login Button</string>
    <string name="google_login_button">Google Login Button</string>
    <string name="profile_image">Profile Image</string>
    <string name="main_activity_scrollview">Main Activity Scrollview</string>
    <string name="food_preview_image">Food preview image</string>
    <string name="vegetarian_icon">Vegetarian icon</string>
    <string name="spicy_icon">Spicy icon</string>

    <!--app text-->
    <string name="logged_out_warning">Pentru a continua, te rugam sa te autentifici sau sa iti creezi un cont nou.</string>
    <string name="or_login_with">sau logheaza-te cu</string>
    <string name="terms_and_conditions_checkbox">Sunt de acord cu Termenii si conditiile</string>
    <string name="star">*</string>
    <string name="greeting">Salut</string>

    <!--form validation-->
    <string name="error_provide_all">Te rugam sa introduci toate datele</string>
    <string name="error_short_password">Parola trebuie sa contina cel putin 6 caractere</string>
    <string name="error_passwords_dont_match">Parolele trebuie sa coincida</string>
    <string name="error_invalid_email">E-mail invalid</string>
    <string name="error_invalid_phone_number">Numar de telefon invalid</string>
    <string name="error_checkbox">Termenii si conditiile trebuie acceptate</string>
    <string name="error_invalid_credentials">E-mail sau parola gresita</string>
    <string name="error_provide_passwords">Te rugam sa introduci ambele parole</string>

    <!--profile buttons-->
    <string name="profile_button_1">Editeaza profilul</string>
    <string name="profile_button_2">Favorite</string>
    <string name="profile_button_3">Comenzile mele</string>
    <string name="profile_button_4">Delogare</string>
    <string name="load_photo_button">Incarca din galerie</string>
    <string name="take_photo_button">Fa o poza</string>

    <!--other-->
    <string name="something_went_wrong">Ceva nu a mers bine. Te rugam incearca din nou.</string>
    <string name="accept_photo">Accept</string>
    <string name="reject_photo">Respinge</string>
    <string name="must_be_portrait_mode">Tineti telefonul in modul portret</string>
    <string name="permissions_not_granted">Permisiunile nu au fost acceptate</string>
    <string name="price">Pret</string>
    <string name="currency">Lei</string>
    <string name="search">Search</string>
    <string name="personal_data_textView">Date personale</string>
    <string name="password_textView">Parola</string>
    <string name="share">Share</string>
    <string name="favourites">Favourites</string>
    <string name="spicy">Iute</string>
    <string name="vegetarian">Vegetarian</string>

    <!--Facebook login-->
    <string name="facebook_app_id">641036353668223</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">bfc2ac74a20e8637ac61ed52b709a6ea</string>

    <!--Menu buttons-->
    <string name="pizza_menu_button">PIZZA</string>
    <string name="pasta_menu_button">PASTE</string>
    <string name="salads_menu_button">SALATE</string>
    <string name="dessert_menu_button">DESERT</string>
    <string name="drinks_menu_button">BAUTURI</string>
    <string name="sauces_menu_button">SOSURI</string>
    <string name="sides_menu_button">SIDES</string>

    <!--Food types-->
    <string name="pizza">Pizza</string>
    <string name="pasta">Paste</string>
    <string name="salads">Salata</string>
    <string name="sauces">Sos</string>

</resources>