<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FoodDetailActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/food_preview_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/logo" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="0dp"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="@string/app_name" />

        <View
            android:id="@+id/line"
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/ingredientsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="0dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            tools:text="@string/something_went_wrong" />

        <ImageView
            android:id="@+id/vegetarianIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/spicy_icon"
            android:src="@drawable/leaf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/spicyIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/vegetarian_icon"
            android:src="@drawable/chilli"
            app:layout_constraintEnd_toStartOf="@+id/vegetarianIcon"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>