<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileLoggedInFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/profile_image_imageview"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/ic_profile_placeholder"
                android:contentDescription="@string/profile_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/greeting"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_button"
                android:text="@string/profile_button_1"
                style="@style/Theme.InfoButton"
                app:backgroundTint="@color/white"
                app:icon="@drawable/edit_pencil"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favourites_button"
                android:text="@string/profile_button_2"
                style="@style/Theme.InfoButton"
                app:backgroundTint="@color/white"
                app:icon="@drawable/heart"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_history_button"
                android:text="@string/profile_button_3"
                style="@style/Theme.InfoButton"
                app:backgroundTint="@color/white"
                app:icon="@drawable/order_history"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:text="@string/profile_button_4"
                style="@style/Theme.InfoButton"
                app:backgroundTint="@color/white"
                app:icon="@drawable/logout"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>