<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingVertical="@dimen/screen_vertical_padding"
        tools:context=".SignupActivity">

        <ScrollView
            android:id="@+id/signupScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/background"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signup_inner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_name_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="0dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/error_text"
                    app:layout_constraintWidth_percent="0.47"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/first_name_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="0dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    app:layout_constraintBaseline_toBaselineOf="@+id/last_name_textinput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.47"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/email_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:hint="@string/email_textinput"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_textinput"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/phone_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number_textinput"
                    android:inputType="phone"
                    android:maxLength="15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_textinput"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/password_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password_textinput"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_textinput"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/confirm_password_textinput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_password_textinput"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_textinput"
                    tools:ignore="TextContrastCheck" />

                <CheckBox
                    android:id="@+id/terms_and_conditions_checkbox"
                    style="@style/Theme.Text"
                    android:layout_marginTop="20dp"
                    android:text="@string/terms_and_conditions_checkbox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_textinput" />

                <include
                    android:id="@+id/signup_button"
                    layout="@layout/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions_checkbox"
                    bind:buttonText="@{@string/signup_button}" />

                <TextView
                    android:id="@+id/star_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/star"
                    android:textColor="@color/primary"
                    app:layout_constraintBaseline_toBaselineOf="@+id/terms_and_conditions_checkbox"
                    app:layout_constraintStart_toEndOf="@+id/terms_and_conditions_checkbox" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/error"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>