<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.EditProfileActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                tools:context=".ui.EditProfileActivity">

                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/error"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPersonalData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/personal_data_textView"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/errorText" />

                <EditText
                    android:id="@+id/lastNameTextInput"
                    style="@style/Theme.TextInput"
                    android:layout_width="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPersonalData"
                    app:layout_constraintWidth_percent="0.4" />

                <EditText
                    android:id="@+id/firstNameTextInput"
                    style="@style/Theme.TextInput"
                    android:layout_width="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lastNameTextInput"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPersonalData" />

                <EditText
                    android:id="@+id/editTextPhone"
                    style="@style/Theme.TextInput"
                    android:layout_width="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/phone_number_textinput"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameTextInput" />

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/password_textView"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                <EditText
                    android:id="@+id/oldPasswordTextInput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/old_password"
                    android:maxLength="64"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

                <EditText
                    android:id="@+id/newPasswordTextInput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/new_password"
                    android:maxLength="64"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/oldPasswordTextInput" />

                <EditText
                    android:id="@+id/confirmNewPasswordTextInput"
                    style="@style/Theme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_new_password"
                    android:maxLength="64"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newPasswordTextInput" />

                <include
                    android:id="@+id/save_button"
                    layout="@layout/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordTextInput"
                    bind:buttonText="@{@string/save_button}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/loading_screen"
            layout="@layout/loading_screen"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>